sumo/tests/traci/Scenario/InvalidFlag/errors.traci
Answered with error to command 115: Road map domain does not contain writable variables
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
